--- a/homework 1.1
+++ b/homework 1.1
@@ -72,4 +72,4 @@ ________________________________________________________________________________
 Кейс 7.
 Какой процессор вы выберете - Intel Core i5 9600K или Intel Core i7 7700K? Почему Intel Core i5 9600K или Intel Core i7 7700K? Изменится ли мнение после просмотра этого сравнения? Опишите ход ваших мыслей. Какую материнскую плату вы выберете для выбранного процессора?
 
-Я бы выбрал Intel Core i5 9600K, так как это поколение процессоров новее. Это видно по числовому значению (9600K). После просмотра характеристик мое мнение не поменялось, скорее укрепло, так как помимо более хороших характеристик у него ниже цена.
+Я бы выбрал Intel Core i5 9600K, так как это поколение процессоров новее. Это видно по числовому значению (9600K). После просмотра характеристик мое мнение не поменялось, скорее укрепло, так как помимо более хороших характеристик у него ниже цена.1
